# MCV

./: CMakeLists.txt  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
